# BlinkTalkCapstone

./: .gitignore  2_WEEK_PLAN.md  5_WEEK_WORK_PLAN.md  BlinkTalk_Interim_Report.md  Makefile  Presentation_Quick_Reference.md  README.md  Test_Fixes_Week_5.md  Week2Presentation.md  Week5_Presentation_Quick_Reference.md
.cursor/scopes/: Week2-FrameBuffer.md  Week5_Calibration_Profiles.md  Week6_Swift_Networking_UX.md
Camera_View/: Camera_ViewApp.swift  ContentView.swift  IntroView.swift
Camera_View/Camera_View.xcdatamodeld/Camera_View.xcdatamodel/: contents
OldBlinkTalk/: CameraView.swift  FinalBT.py  HomePage.swift  RunBlinkTalk.py  ServerBT.py  SharedFrame.py  TranslationResultView.swift  User.swift
archive/: BlinkTalk_Architecture_Diagram.txt  BlinkTalk_Presentation_Outline.md  BlinkTalk_Week4_Presentation.md  BlinkTalk_Week5_Presentation.md  CURSOR_BRIEF.md  SharedFrame.txt  Week5_Presentation_Quick_Reference.md  blinktalk_tickets.csv  flowcharts.txt
py/: demo_week4.py  demo_week5.py  pyproject.toml  sequences_v1.json
py/api/: main.py  middleware.py
py/api/routers/: calibration.py  frame.py  health.py  translation.py  vocabulary.py
py/core/: __init__.py  blink_classifier.py  calibration.py  eye_tracker.py  frame_buffer.py  sequence_engine.py  sequences_loader.py  translation_statistics.py
py/tests/: test_blink_classifier.py  test_blink_detection_integration.py  test_calibration.py  test_calibration_api.py  test_calibration_integration.py  test_eye_tracker.py  test_frame_api.py  test_frame_buffer.py  test_health.py  test_sequence_engine.py  test_sequences_loader.py  test_translation_integration.py  test_vocabulary_api.py
sw/Camera_View/:  CameraView.swift  BlinkDetectionView.swift  CalibrationView.swift  ContentView.swift  HomeView.swift  IntroView.swift  Persistence.swift  ResultView.swift
sw/Camera_View.xcodeproj/: project.pbxproj
sw/Camera_View/Camera_View.xcdatamodeld/: .xccurrentversion
sw/Camera_ViewTests/: Camera_ViewTests.swift
sw/Camera_ViewUITests/: Camera_ViewUITests.swift  Camera_ViewUITestsLaunchTests.swift
(+12 files in other folders)
